# eggvance

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  BUILDING.md  README.md  egg-vance.sln  eggvance.sln  notes.md  progress.md  progression.md  setup.bat  todo.md
eggvance/: CMakeLists.txt  eggshell.html  eggvance.html  eggvance.ini  eggvance.rc  eggvance.toml  eggvance.vcxproj  eggvance.vcxproj.filters
eggvance/icon/: icon.ase  icon.cpp  icon.h
eggvance/modules/glad/: glad.c  glad.h
eggvance/modules/icon/: LICENSE  icon.ase
eggvance/modules/imgui/: imconfig.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp
eggvance/src/: args.cpp  args.h  clock.cpp  clock.h  config.h  core.cpp  core.h  dma.cpp  dma.h  dmacontroller.cpp  dmacontroller.h  emulator.cpp  emulator.h  framelimiter.cpp  framelimiter.h  input.cpp  input.h  keypad.cpp  keypad.h  main.cpp  microclock.cpp  microclock.h  microtimer.cpp  microtimer.h  timer.cpp  timer.h
eggvance/src/apu/: apu.cpp  apu.h  apuio.h  channel.cpp  channel.h  constants.h  envelope.cpp  envelope.h  fifo.cpp  fifo.h  io.cpp  io.h  length.cpp  length.h  noise.cpp  noise.h  sequencer.cpp  sequencer.h  square.cpp  square.h  square1.cpp  square1.h  square2.cpp  square2.h  sweep.cpp  sweep.h  wave.cpp  wave.h  waveram.cpp  waveram.h
eggvance/src/arm/: arithmetic.cpp  arithmetic.inl  arm.cpp  arm.h  arm.inl  barrelshifter.inl  bios.cpp  bios.h  bus.cpp  constants.h  decode.cpp  decode.h  decoder.cpp  decoder.h  diasm.cpp  diasm.h  disassemble.cpp  disassemble.h  disassembler.cpp  disassembler.h  enums.h  gpr.h  instr-arm.cpp  instr-arm.py  instr-thumb.cpp  instr-thumb.py  instr_arm.cpp  instr_thumb.cpp  interrupt.cpp  io.cpp  io.h  isa-arm.inl  isa-thumb.inl  isa_arm.cpp  isa_thumb.cpp  isa_thumb.inl  lut_arm.cpp  lut_arm.py  lut_thumb.cpp  lut_thumb.py  (+19 more)
eggvance/src/base/: array.h  bit.h  bits.h  config.cpp  config.h  constants.h  eggcpt.h  exit.h  filesystem.h  fs.cpp  fs.h  input.cpp  input.h  int.h  log.h  logging.h  macros.h  nfd.h  opengl.h  panic.h  ram.h  register.h  ringbuffer.h  sdl.h  sdl2.cpp  sdl2.h  stereosample.h  types.h  util.h  utility.h
eggvance/src/cartridge/: backup.h  cartridge.cpp  cartridge.h
eggvance/src/common/: bitfield.h  bits.h  bitutil.h  bitvalue.h  config.cpp  config.h  constants.h  defines.h  delegate.h  enums.h  fileutil.cpp  fileutil.h  fmt.h  fs.cpp  fs.h  input.cpp  input.h  integer.h  iterator.h  macros.h  message.cpp  message.h  mpl.h  ram.h  smallvector.h  tmp.h  types.h  utility.h
eggvance/src/core/: audiocontext.cpp  audiocontext.h  common.cpp  common.h  context.cpp  context.h  core.cpp  core.h  framecounter.cpp  framecounter.h  inputcontext.cpp  inputcontext.h  main.cpp  main_emscripten.cpp  main_sdl.cpp  synchronizer.cpp  synchronizer.h  videocontext.cpp  videocontext.h
eggvance/src/devices/: audiodevice.cpp  audiodevice.h  devices.cpp  devices.h  inputdevice.cpp  inputdevice.h  videodevice.cpp  videodevice.h
eggvance/src/dma/: dma.cpp  dma.h  dmaaddress.cpp  dmaaddress.h  dmac.cpp  dmac.h  dmachannel.cpp  dmachannel.h  io.cpp  io.h
eggvance/src/frontend/: audiocontext.cpp  audiocontext.h  core.cpp  framecounter.cpp  framecounter.h  frameratelimiter.cpp  frameratelimiter.h  inputcontext.cpp  inputcontext.h  main.cpp  nfd.h  opengl.h  sdl2.h  videocontext.cpp  videocontext.h
eggvance/src/gamepad/: gamepad.cpp  gamepad.h  io.cpp  io.h
eggvance/src/gamepak/: backup.cpp  backup.h  dummy.cpp  dummy.h  eeprom.cpp  eeprom.h  file.cpp  file.h  fileutil.cpp  fileutil.h  flash.cpp  flash.h  gamepak.cpp  gamepak.h  gpio.cpp  gpio.h  header.cpp  header.h  none.cpp  none.h  override.cpp  override.h  overrides.cpp  overwrites.cpp  overwrites.h  pin.cpp  pin.h  rom.cpp  rom.h  rtc.cpp  rtc.h  save.cpp  save.h  serialbuffer.h  sram.cpp  sram.h
eggvance/src/gpu/: buffer.h  collapse.cpp  constants.h  dimensions.h  gpu.cpp  gpu.h  io.h  layer.h  mapentry.cpp  mapentry.h  matrix.h  oam.h  oamentry.cpp  oamentry.h  paletteram.h  point.h  render.cpp  videoram.cpp  videoram.h
eggvance/src/interrupt/: io.h  irqhandler.cpp  irqhandler.h
eggvance/src/irq/: io.h  irqh.cpp  irqh.h
eggvance/src/keypad/: io.cpp  io.h  keypad.cpp  keypad.h
eggvance/src/memory/: memory.h
eggvance/src/mmio/: ppuio.h
eggvance/src/mmu/: bios.cpp  bios.h  bios_data.cpp  bios_normmatt.h  constants.h  dma.cpp  dma.h  enums.h  gamepak.cpp  gamepak.h  interrupt.h  io.cpp  io.h  map.h  memmap.h  memory.h  miscio.h  mmio.cpp  mmio.h  mmu.cpp  mmu.h  oam.cpp  oam.h  oamentry.cpp  oamentry.h  palette.cpp  palette.h  paletteram.cpp  paletteram.h  pram.cpp  (+9 more)
(+615 files in other folders)
